--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            
+            background-image: url('https://tenor.com/es/ver/blue-heart-black-background-gif-23123319');
+
             
         }
         .contador{
